# TiViT

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt  setup.cfg
src/: analysis.py  arguments.py  classifier.py  datautils.py  embedding.py  mutual_knn.py  tivit.py  utils.py
tivit/: __init__.py  analysis.py  arguments.py  classifier.py  cli.py  embedding.py  tivit.py
