[metadata]
name = tivit
version = 0.1.0
description = Time series representations from pretrained vision transformers
long_description = file: README.md
long_description_content_type = text/markdown
license_files = LICENSE
author = Simon Roschmann, Quentin Bouniot, Vasilii Feofanov, Ievgen Redko, Zeynep Akata
url = https://github.com/roschmsi/TiViT
project_urls =
    Repository = https://github.com/roschmsi/TiViT
    Paper = https://arxiv.org/abs/2506.08641

[options]
packages = find:
python_requires = >=3.11
install_requires =
    aeon==1.2.0
    einops==0.8.1
    mantis-tsfm @ git+https://github.com/roschmsi/mantis.git
    momentfm @ git+https://github.com/roschmsi/moment.git
    numpy==1.25.2
    open_clip_torch==2.32.0
    pandas==2.3.0
    scikit-learn==1.6.1
    torch==2.7.1
    torchvision==0.22.1
    tqdm==4.67.1
    transformers==4.53.0

[options.packages.find]
include = tivit*

[options.extras_require]
analysis =
    dadapy>=0.3.4

[options.entry_points]
console_scripts =
    tivit = tivit.cli:main
